--- a/BlazingDewey/Client/Pages/Home/Index.razor
+++ b/BlazingDewey/Client/Pages/Home/Index.razor
@@ -10,7 +10,7 @@
         <SfCard ID="HomeCard" Orientation="CardOrientation.Vertical">
             <img style="height: 630px; width: 100%; margin: 0px;" src="/images/replacement.jpg" />
              
-                <CardHeader>Replacing Books (READ FOR INSTRUCTIONS)</CardHeader>
+                <CardHeader>Replacing Books</CardHeader>
                 <CardContent>
                     <p>Drag and Drop the items in ascending order by using the tool on the left of every item in the grid!</p>
                     <p>Once complete, click on submit your chosen order on the top left of the grid!</p>
@@ -27,8 +27,8 @@
             <img style="height: 630px; width: 100%; margin: 0px;" src="/images/search.jpg" />
             <CardHeader>Identify Areas</CardHeader>
             <CardContent>
-                <p>Are you lost in the abundancness of all this information? You're in the right place.</p>
-                <p>Go here to identify areas and find what you're looking for.</p>
+                <p>Are you lost in the abundancness of all this information?</p>
+                <p>Match the Deweys with the Descriptions and vice versa by moving the Kanban Cards! The mode is selected at random...</p>
             </CardContent>
             <CardFooter>
                 <CardFooterContent>
