--- a/BlazingDewey/Client/Pages/Identify/Index.razor
+++ b/BlazingDewey/Client/Pages/Identify/Index.razor
@@ -1,8 +1,11 @@
 ﻿@page "/dewey/identifyareasindex"
 
+@inject NavigationManager navManager
+
 @using Syncfusion.Blazor.Kanban
 @using Syncfusion.Blazor.Buttons
 @using Syncfusion.Blazor.Notifications  
+@using Syncfusion.Blazor.Popups
 
 <SfToast @ref="toastStandard" ID="toast_type">
     <ToastPosition X="Right" Y="Top"></ToastPosition>
@@ -12,7 +15,8 @@
             <div class="pt-3">
                 @if (DeweyToDescription is true)
                 {
-                    <h5 class="text-secondary pt-3 pb-3">Match the Deweys to the Descriptions!</h5>
+                    <h5 class="text-secondary pt-3 pb-1">Match the Deweys to the Descriptions!</h5>
+                    <label class="text-info pb-3">Hint: Move the kanban tasks to the correct column</label>
                     <SfKanban Width="100%" @ref="kanbanReference" TValue="KanbanModel" KeyField="Status" DataSource="PossibleAnswersDictionary.Values.OrderBy(x => RandomMode.Next()).ToList()" AllowDragAndDrop="true" ConstraintType="ConstraintType.Column">
                         <KanbanColumns>
                             @foreach (var item in columnDataDictionary.Values)
@@ -25,10 +29,23 @@
                     <div class="mt-2 pr-3">
                         <SfButton CssClass="float-right" OnClick="(() => SubmitGame(true))">Submit</SfButton>
                     </div>
+                    <SfDialog ShowCloseIcon="false" IsModal="true" Width="25%" @bind-Visible="GameWon">
+                        <DialogTemplates>
+                            <Header>Well Done!</Header>
+                            <Content>
+                                Do you want to play again? Game mode will be chosen at random...
+                            </Content>
+                        </DialogTemplates>
+                        <DialogButtons>
+                            <DialogButton Content="Yes" IsPrimary="true" OnClick="StartNewGame"></DialogButton>
+                            <DialogButton Content="No" OnClick="ReturnBack"></DialogButton>
+                        </DialogButtons>
+                    </SfDialog>
                 }
                 else if (DeweyToDescription is false)
                 {
-                    <h5 class="text-secondary pt-3 pb-3">Match the Descriptions to the Deweys!</h5>
+                    <h5 class="text-secondary pt-3 pb-1">Match the Descriptions to the Deweys!</h5>
+                    <label class="text-info pb-3">Hint: Move the kanban tasks to the correct column</label>
                     <SfKanban Width="100%" @ref="kanbanReference" TValue="KanbanModel" KeyField="Status" DataSource="PossibleAnswersDictionaryDescription.Values.OrderBy(x => RandomMode.Next()).ToList()" AllowDragAndDrop="true" ConstraintType="ConstraintType.Column">
                         <KanbanColumns>
                             @foreach (var item in columnDataDictionary.Values)
@@ -41,6 +58,18 @@
                     <div class="mt-2 pr-3">
                         <SfButton CssClass="float-right" OnClick="(() => SubmitGame(false))">Submit</SfButton>
                     </div>
+                    <SfDialog ShowCloseIcon="false" IsModal="true" Width="50%" @bind-Visible="GameWon">
+                        <DialogTemplates>
+                            <Header>Well Done!</Header>
+                            <Content>
+                                Do you want to play again? Game mode will be chosen at random...
+                            </Content>
+                        </DialogTemplates>
+                        <DialogButtons>
+                            <DialogButton Content="Yes" IsPrimary="true" OnClick="StartNewGame"></DialogButton>
+                            <DialogButton Content="No" OnClick="ReturnBack"></DialogButton>
+                        </DialogButtons>
+                    </SfDialog>
                 }
             </div>
         </div>
@@ -63,8 +92,8 @@
     public SfToast toastStandard;
 
     //Boolean
-    [Parameter]
     public bool DeweyToDescription { get; set; }
+    public bool GameWon { get; set; } = false;
 
     //Random
     public Random RandomMode { get; set; } = new();
@@ -93,14 +122,17 @@
 
     protected override void OnInitialized()
     {
+        GameWon = false;
         //Randomly chooses if it is matching deweys to descriptions or vice versa to promote replayability
         int modeChosen = RandomMode.Next(1, 3);
+        columnDataDictionary.Clear();
+        PossibleAnswersDictionary.Clear();
+        PossibleAnswersDictionaryDescription.Clear();
         switch (modeChosen)
         {
             case 1:
                 #region Dewey-Description
                 DeweyToDescription = true;
-                columnDataDictionary.Clear();
                 //Adding Columns
                 int columnCount = 0;
                 string randomColOne = RandomNumber(3);
@@ -184,7 +216,6 @@
             case 2:
                 #region Description-Dewey
                 DeweyToDescription = false;
-                columnDataDictionary.Clear();
                 int columnCountDescription = 0;
                 string randomColOneDescription = Categories[RandomMode.Next(1, 10)];
                 columnDataDictionary.Add(randomColOneDescription, new ColumnModel { HeaderText = randomColOneDescription, KeyField = new List<string>() { $"1" }, MaxCount = 1 });
@@ -265,18 +296,6 @@
         }
     }
 
-    public async Task Toasts(bool gameType)
-    {
-        if (gameType is true)
-        {
-            await toastStandard.ShowAsync(new ToastModel { Title = $"Info!", Content = $"Random Mode Selected: Match the Deweys with the Descriptions!", CssClass = "e-toast-info", Icon = "e-info toast-icons", Timeout = 5000, ShowCloseButton = true });
-        }
-        if (gameType is false)
-        {
-            await toastStandard.ShowAsync(new ToastModel { Title = $"Info!", Content = $"Random Mode Selected: Match the Descriptions with the Deweys!", CssClass = "e-toast-info", Icon = "e-info toast-icons", Timeout = 5000, ShowCloseButton = true });
-        }
-    }
-
     private async void SubmitGame(bool gameType)
     {
         List<bool> correctAnswers = new();
@@ -318,13 +337,34 @@
             if (correctAnswers.Count is 1)
             {
                 //Which means all answers have to had been correct
-                await this.toastStandard.Show(new ToastModel { Title = $"Well Done!", Content = $"You ordered the deweys and descriptions correctly!", CssClass = "e-toast-success", Icon = "e-success toast-icons", Timeout = 5000, ShowCloseButton = true });
+                if (gameType is true)
+                {
+                    await this.toastStandard.Show(new ToastModel { Title = $"Well Done!", Content = $"You ordered the deweys and descriptions correctly!", CssClass = "e-toast-success", Icon = "e-success toast-icons", Timeout = 5000, ShowCloseButton = true });
+                }
+                else
+                {
+                    await this.toastStandard.Show(new ToastModel { Title = $"Well Done!", Content = $"You ordered the descriptions and deweys correctly!", CssClass = "e-toast-success", Icon = "e-success toast-icons", Timeout = 5000, ShowCloseButton = true });
+                }
+                await Task.Delay(1000);
+                GameWon = true;
+                StateHasChanged();
             }
             else
             {
                 await this.toastStandard.Show(new ToastModel { Title = $"Oops!", Content = $"Deweys dont match their descriptions. Keep trying!", CssClass = "e-toast-warning", Icon = "e-warning toast-icons", Timeout = 5000, ShowCloseButton = true });
             }
         }
+    }
+
+    private async void StartNewGame()
+    {
+        await this.toastStandard.Show(new ToastModel { Title = $"Go Go Go!", Content = $"New Game has started!", CssClass = "e-toast-info", Icon = "e-info toast-icons", Timeout = 5000, ShowCloseButton = true });
+        OnInitialized();
+    }
+
+    private void ReturnBack()
+    {
+        navManager.NavigateTo("");
     }
 
     public string RandomNumber(int length)
