--- a/BlazingDewey/Client/_Imports.razor
+++ b/BlazingDewey/Client/_Imports.razor
@@ -9,4 +9,5 @@
 @using BlazingDewey.Client
 @using BlazingDewey.Client.Shared
 @using BlazingDewey.Shared 
+@using BlazingDewey.Shared.Tree
 @using Syncfusion.Blazor
